Se quita main con js, se añade footer y se mejora formulario del login

--- a/index.html
+++ b/index.html
@@ -10,25 +10,38 @@
 <body>
     <header>
         <h1>Empresa God</h1>
-        <img src="" alt="">
     </header>
-    <main>
+    <main id="main">
         <section class="login">
             <form class="inicio" action="">
+                <h1>INICIAR SECCIÓN</h1>
                 <label for="">Ingrese Usuario</label>
                 <input type="text" id="nombre" placeholder="Usuario">
                 <label for="">Ingrese contraseña</label>
                 <input type="password" id="contraseña" placeholder="Contraseña">
-                <button id="iniciar">Iniciar sección</button>
+                <input type="button" id="iniciar" value="Iniciar">
             </form>
         </section>
         <section class="contenido">
-            
-        </section>
-        
-    </main>
-    <footer>
 
+        </section>
+    </main>
+    <footer class="pie-pagina">
+        <section class="grupo-1">
+            <section class="box">
+                <section class="a">
+                        <h1>Empresa ZZ</h1>
+                </section>
+            </section>
+            <section class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+            </section>
+        </section>
+        <section class="grupo-2">
+            <p> 2023 Yo - Todos los Derechos Reservados.</p>
+        </section>
     </footer>
     <script src="main.js"></script>
 </body>
